--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tarafindan",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "simple open source license generator",
   "main": "cli.js",
   "scripts": {},
@@ -12,15 +12,21 @@
     "open",
     "source",
     "license",
-    "license",
-    "generator",
+    "license generator",
+    "apache",
     "gnu",
     "mit",
     "gpl",
+    "bsd",
+    "isc",
     "community"
   ],
   "author": "A. Ozan Tekin",
   "dependencies": {
     "inquirer": "^8.2.0"
+  },
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/ahmetozantekin/tarafindan.git"
   }
 }
